Update 'go-zmbfmfhu' component image to: quay.io/rhtap_qe/go-zmbfmfhu:a5aa7e2a769484585c339047310d59b67fd1ba5c@sha256:78490ab0a642a844f7c30a80da61c4fdeb4ad8c73a4fef723ace109f45366ffa

--- a/components/go-zmbfmfhu/overlays/development/deployment-patch.yaml
+++ b/components/go-zmbfmfhu/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-zmbfmfhu
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-zmbfmfhu:a5aa7e2a769484585c339047310d59b67fd1ba5c@sha256:78490ab0a642a844f7c30a80da61c4fdeb4ad8c73a4fef723ace109f45366ffa
+          name: container-image
